# Hypricing

./: .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  Hypricing.slnx  PARSER_DESIGN.md  README.md
.continue/prompts/: new-prompt-1.md  new-prompt-2.md  new-prompt-3.md  new-prompt-4.md  new-prompt-5.md  new-prompt.md
.github/workflows/: ci-native.yml
doc/architecture/: plugin-system.md
docs/: AUDIO_BACKEND.md
native/hyprlangwrap/: CMakeLists.txt
native/hyprlangwrap/include/: hyprlang_wrap.h
native/hyprlangwrap/src/: hyprlang_wrap.cpp
native/hyprlangwrap/tests/: test_simple.cpp
src/: hypricing.slnx
src/Hypricing.Cli/: Hypricing.Cli.csproj  Program.cs
src/Hypricing.Core/: Hypricing.Core.csproj
src/Hypricing.Core/Backends/Audio/: AudioPreset.cs  JsonAudioBackend.cs
src/Hypricing.Core/Contracts/: IAudioBackend.cs
src/Hypricing.Core/Dispatchers/: Dispatcher.cs  DispatcherKind.cs  DispatcherRegistry.cs
src/Hypricing.Core/Infrastructure/: CliRunner.cs  ConfigFileLocator.cs
src/Hypricing.Core/Keywords/: KeywordKind.cs  KeywordRegistry.cs
src/Hypricing.Core/Mods/: ModKind.cs  ModKindRegistry.cs
src/Hypricing.Core/Presets/: audio-pipewire.json  audio-pulseaudio.json
src/Hypricing.Core/Services/: AudioService.cs  HyprlandService.cs
src/Hypricing.Core/Statements/: ParsedStatement.cs  RawStatement.cs
src/Hypricing.Desktop/: App.axaml  App.axaml.cs  Hypricing.Desktop.csproj  Program.cs  app.manifest
src/Hypricing.Desktop/ViewModels/: AsyncRelayCommand.cs  AudioViewModel.cs  BackupViewModel.cs  DeclarationItemViewModel.cs  EnvItemViewModel.cs  ExecItemViewModel.cs  InputViewModel.cs  MainWindowViewModel.cs  PlaceholderViewModel.cs  StartupViewModel.cs  VariablesViewModel.cs  ViewModelBase.cs
src/Hypricing.Desktop/Views/: AudioView.axaml  AudioView.axaml.cs  BackupView.axaml  BackupView.axaml.cs  InputView.axaml  InputView.axaml.cs  KeybindingsView.axaml  MainWindow.axaml  MainWindow.axaml.cs  StartupView.axaml  StartupView.axaml.cs  VariablesView.axaml  VariablesView.axaml.cs
src/Hypricing.HyprlangParser/: README.md
src/Hypricing.View/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
src/Hyprland.Configuration/: Hyprland.Configuration.csproj  HyprlangNative.cs  HyprlangValidationService.cs
src/Hyprland.Configuration/Ast/: HyprAssignment.cs  HyprBlock.cs  HyprComment.cs  HyprDocument.cs  HyprNode.cs  HyprStatement.cs
src/Hyprland.Configuration/Formatting/: HyprWriter.cs
src/Hyprland.Configuration/IO/: HyprConfigLoader.cs  HyprFile.cs  MergedConfig.cs  SourceLocation.cs
src/Hyprland.Configuration/Native/: HyprlangWrapper.cs  ParseContext.cs  ParseResult.cs
src/Hyprland.Configuration/Parsing/: HyprParser.cs
tests/Hypricing.Core.Tests/: Hypricing.Core.Tests.csproj  HyprlandServiceTests.cs  JsonAudioBackendTests.cs
